<resources>
    <string name="app_name">wallet</string>
    <string name="exit_tips">再按一次退出程序</string>

    <string name="guide_text1">创建你的</string>
    <string name="guide_text2">第一个数字身份</string>

    <string name="btn_guide_create">创建身份</string>
    <string name="btn_guide_recovery">恢复身份</string>
    <string name="create_identity_name_input_tips">请输入身份名称</string>

    <string name="title_create_identity">创建身份</string>
    <string name="doing_create_identity">正在创建身份…</string>
    <string name="create_identity_success">创建身份成功</string>
    <string name="create_identity_fail">创建身份失败</string>

    <string name="title_backup">备份提示</string>
    <string name="title_mnemonic">助记词</string>

    <string name="create_wallet_alert1">* 密码用于隐私保护和交易授权，强度非常重要</string>
    <string name="create_wallet_alert2">* 钱包不存储密码秘钥，也无法帮您找回，请务必牢记</string>
    <string name="create_wallet_name_hint">钱包名称</string>
    <string name="create_wallet_pwd_hint">密码</string>
    <string name="create_wallet_pwd_again_hint">重复密码</string>
    <string name="create_wallet_pwd_reminder_info_hint">密码提示信息(可不填)</string>
    <string name="wallet_manager_load_wallet">导入钱包</string>
    <string name="create_wallet_agreement_reminder">我已经仔细阅读并同意</string>
    <string name="create_wallet_agreement">服务及隐私条款</string>
    <string name="recovery_identity_name_hint">新身份名</string>
    <string name="create_wallet_name_repeat_tips">钱包名称重复</string>
    <string name="create_wallet_name_input_tips">请输入钱包名称</string>
    <string name="alert_recovery_identity">正在恢复身份…</string>

    <string name="create_wallet_pwd_input_tips">密码不能为空</string>
    <string name="create_wallet_pwdconfirm_input_tips">确认密码不能为空</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>

    <string name="news_center_all_read">全部已读</string>

    <string name="wallet_backup_tips1">最后一步</string>
    <string name="wallet_backup_tips2">立即备份你的钱包！</string>
    <string name="wallet_backup_tips3">备份钱包：导出「助记词」并抄写到安全的地方，千万不要保存到网络上，然后尝试转入、转出小额资产开始使用.</string>
    <string name="wallet_backup_backup_btn">下一步</string>
    <string name="wallet_backup_skip_btn">跳过</string>
    <string name="wallet_backup_backup_help">查看备份详细教程</string>

    <string name="mnemonic_backup_title">备份助记词</string>
    <string name="mnemonic_backup_tips1">抄写下你的钱包助记词</string>
    <string name="mnemonic_backup_tips2">助记词用于回复钱包或重置钱包密码，降它准确的抄写到纸上，并存放在只有你知道的安全的地方。</string>
    <string name="mnemonic_backup_alert_tips">如有人获取你的助记词将直接获取你的资产！请抄下助记词并存放在安全的地方</string>
    <string name="mnemonic_backup_dailog_title">请勿截图</string>
    <string name="mnemonic_backup_alert_btn">知道了</string>
    <string name="mnemonic_backup_alert_title">请勿截图</string>

    <string name="verify_backup_tip1">确认你的钱包助记词</string>
    <string name="verify_backup_tip2">请按顺序点击助记词，以确认你的备份助记词正确。</string>
    <string name="verify_backup_failed">备份失败，请检查你的助记词</string>
    <string name="input_pwd_dialog_tip">请输入密码</string>
    <string name="input_pwd_delete_tip">请慎重，此操作无法撤销</string>
    <string name="input_pwd_dialog_confirm">确认</string>

    <string name="title_identity_recovery">恢复身份</string>
    <string name="identity_recovery_fail">恢复身份失败</string>

    <string name="homepage_tab_text_mall">钱包</string>
    <string name="homepage_tab_text_mine">我的</string>
    <string name="mine_title">我的</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="property_drawer_create_wallet">创建钱包</string>


    <string name="property_total_assets_cny">总资产(¥)</string>
    <string name="property_total_assets_usd">总资产($)</string>
    <string name="property_approximate">≈</string>

    <string name="title_main_wallet">钱包</string>
    <string name="identity_title">我的身份</string>

    <string name="receipt">收款</string>
    <string name="receipt_addr">收款地址</string>
    <string name="copy_wallet">钱包地址已复制</string>

    <string name="property_detail_title">ETC</string>
    <string name="property_detail_transfer">转账</string>
    <string name="property_detail_gathering">收款</string>

    <string name="transfer_title_confirm">转账详情</string>
    <string name="transfer_title">转账</string>
    <string name="transfer_address">收款人钱包地址</string>
    <string name="transfer_money">转账金额</string>
    <string name="transfer_remark">备注</string>
    <string name="transfer_gas_cost">矿工费用：</string>
    <string name="transfer_sat_price">自定义矿工费用</string>
    <string name="transfer_gas_price">自定义 Gas Price</string>
    <string name="transfer_gas">自定义 Gas</string>
    <string name="transfer_advanced_setting">高级选项</string>
    <string name="transfer_hex_data">十六进制数据</string>
    <string name="transfer_next">下一步</string>
    <string name="transfer_gas_slow">慢</string>
    <string name="transfer_gas_quick">快</string>
    <string name="transfer_ether_unit">&#160;ether</string>


    <string name="empty" />

    <!-- Subtitles -->
    <string name="subtitle_from">付款地址</string>
    <string name="subtitle_to">收款地址</string>
    <string name="subtitle_gas_fee">矿工费</string>
    <string name="label_gas_limit">Gas Limit</string>
    <string name="label_gas_price">Gas Price</string>
    <string name="subtitle_transaction_num">交易号 #</string>
    <string name="subtitle_transaction_time">交易时间</string>
    <string name="subtitle_block_num">区块 #</string>
    <string name="action_more_details">在区块浏览器中参看详细信息</string>

    <string name="sent">转出</string>
    <string name="create">创建合约</string>
    <string name="received">转入</string>
    <string name="btn_confirm">确认</string>

    <string name="recovery_identity_alert">*使用助记词导入的同时可以修改钱包密码</string>
    <string name="btn_recovery_identity">恢复身份</string>
    <string name="et_mnemonic_hint">输入助记词用空格分隔</string>
    <string name="recovery_mnemonic_input_tips">助记词不能为空</string>
    <string name="recovery_identity_pwd_input_tips">密码不能为空</string>
    <string name="recovery_identity_pwd_confirm_input_tips">确认密码不能为空</string>
    <string name="recovery_identity_confirm_input_tips">密码不一致</string>

    <string name="wallet_type_eth">ETH</string>
    <string name="wallet_type_btc">BTC</string>
    <string name="wallet_type_eos">EOS</string>

    <string name="tv_wallet_op_add">创建</string>
    <string name="tv_wallet_op_import">导入</string>
    <string name="tv_cancle">取消</string>

    <string name="export_mnemonic">导出助记词</string>
    <string name="export_keystore">导出 Keystore</string>
    <string name="export_privateKey">导出私钥</string>

    <string name="import_wallet_by_keystore">复制粘贴keystore</string>
    <string name="import_wallet_et_hint">Keystore文件内容</string>
    <string name="begin_import">开始导入</string>
    <string name="import_wallet_by_mnemonic_hint">输入助记词用空格分隔</string>
    <string name="import_wallet_by_mnemonic_standard">输入助记词用空格分隔</string>
    <string name="import_wallet_by_private_key_hint">输入名文私钥</string>
    <string name="import_wallet_keystore_input_tips">请入如正确的keystore</string>
    <string name="import_wallet_mnemonic_input_tips">请输入如正确的助记词</string>
    <string name="import_wallet_private_input_tips">请输入如正确的私钥</string>
    <string name="import_wallet_pwd_input_tips">请入密码</string>
    <string name="import_wallet_pwd_confirm_input_tips">请入确认密码</string>
    <string name="import_wallet_confirm_input_tips">密码不一致</string>

    <string name="load_wallet_by_mnemonic_standard">m/44\'/60\'/0\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_ledger">m/44\'/60\'/0\'/0</string>
    <string name="load_wallet_by_mnemonic_standard_custom">m/44\'/60\'/1\'/0/0</string>
    <string name="load_wallet_by_mnemonic_standard_jaxx_option">m/44\'/60\'/0\'/0/0 Jaxx,Metamask(ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_ledger_option">m/44\'/60\'/0\'/0 Ledger (ETH)</string>
    <string name="load_wallet_by_mnemonic_standard_custom_option">m/44\'/60\'/1\'/0/0 自定义路径</string>

    <string name="address_add">添加地址</string>
    <string name="address_add_name_hint">名称</string>
    <string name="address_add_desc_hint">描述 (选填)</string>

    <string name="get_txlist_fail">"获取交易列表失败"</string>
    <string name="text_property">资产</string>
    <string name="text_trans">交易记录</string>

    <string name="quick_bar_text_trans">转账</string>
    <string name="quick_bar_text_receipt">收款</string>
    <string name="quick_bar_text_scan">扫一扫</string>
    <string name="quick_bar_text_trad">一键买卖</string>

    <string name="mine_avator">头像</string>
    <string name="mine_identity_name">身份名</string>
    <string name="mine_identity_id">身份名ID</string>
    <string name="mine_into_wallet">钱包管理</string>
    <string name="mine_into_setting">使用设置</string>
    <string name="mine_into_address">地址管理</string>
    <string name="mine_into_help">帮助与反馈</string>
    <string name="mine_into_protocol">用户协议</string>
    <string name="mine_into_about">关于我们</string>
    <string name="mine_backup">备份身份</string>
    <string name="mine_quit">退出当前身份</string>

    <string name="dialog_title">密码输入</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_input_hint">请输入您的密码</string>

    <string name="setting_net">节点设置</string>
    <string name="setting_coin">货币设置</string>
    <string name="setting_net_test">测试节点</string>
    <string name="setting_net_main">正式节点</string>

    <string name="btn_save">保存</string>
</resources>
