<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_text1"
            android:textSize="24sp"
            android:textColor="@color/global_black"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_text2"
            android:textSize="24sp"
            android:textColor="@color/global_black"
            android:gravity="center"/>
    <Button
        android:id="@+id/btn_create_identity"
        android:text="@string/btn_guide_create"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        style="@style/button_red"/>
    <Button
        android:id="@+id/btn_recovery_identity"
        android:text="@string/btn_guide_recovery"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        style="@style/button_gray"/>
    </LinearLayout>
</FrameLayout>
