<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
    <include layout="@layout/common_toolbar" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_backup_tips1"
        android:textSize="24sp"
        android:textColor="@color/global_black"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_backup_tips2"
        android:textSize="24sp"
        android:textColor="@color/global_black"
        android:gravity="center"/>
    <TextView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/wallet_backup_tips3"
        android:textColor="#FF999999"
        android:textSize="@dimen/sp_14" />
    <Button
        android:id="@+id/btn_backup"
        android:text="@string/wallet_backup_backup_btn"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        style="@style/button_red"/>
</LinearLayout>
</FrameLayout>
