<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginTop="23dp"
    android:background="@color/white">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/mine_title"
        android:textColor="@color/discovery_application_text_color"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_alignParentBottom="true"
        android:background="@color/item_divider_bg_color" />
</RelativeLayout>


<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp_20"
    android:paddingEnd="@dimen/dp_20"

    android:scrollbars="none"
    android:fadingEdge="none"
    android:background="@color/global_bg_grey"
    android:overScrollMode="never">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_20"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/radius_10_card"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                style="@style/mine_left_text"
                android:text="@string/mine_avator"/>
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/icon_avator"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/mine_left_text"
                android:text="@string/mine_identity_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:id="@+id/tv_identity_name"
                android:textSize="14sp"
                android:textColor="@color/mine_text_value" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                style="@style/mine_left_text"
                android:text="@string/mine_identity_id"/>
            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:textSize="14sp"
                android:textColor="@color/mine_text_value"/>
        </RelativeLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/radius_10_card"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/rl_wallet_manage">
            <TextView
                style="@style/mine_left_text_into"
                android:text="@string/mine_into_wallet"/>
            <ImageView
                style="@style/mine_into_icon"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/rl_address_manage">
            <TextView
                style="@style/mine_left_text_into"
                android:text="@string/mine_into_setting"/>
            <ImageView
                style="@style/mine_into_icon"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/mine_left_text_into"
                android:text="@string/mine_into_help"/>
            <ImageView
                style="@style/mine_into_icon"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/mine_left_text_into"
                android:text="@string/mine_into_protocol"/>
            <ImageView
                style="@style/mine_into_icon"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                style="@style/mine_left_text_into"
                android:text="@string/mine_into_about"/>
            <ImageView
                style="@style/mine_into_icon"/>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/radius_10_card"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20">
            <TextView
                 style="@style/mine_identity_op"
                android:textColor="@color/mine_backup"
                android:text="@string/mine_backup"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mine_line"/>
        <TextView
            style="@style/mine_identity_op"
            android:textColor="@color/mine_quit"
            android:text="@string/mine_quit"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>