<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusable="true"
android:focusableInTouchMode="true"
android:orientation="vertical">
<include layout="@layout/common_toolbar" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_150"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:id="@+id/img_wallet_icon"
        android:src="@drawable/eth"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_20"
        android:id="@+id/tv_wallet_remind"
        android:layout_gravity="center"/>
</LinearLayout>


<EditText
    android:id="@+id/et_wallet_name"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:layout_marginTop="50dp"
    android:background="@null"
    android:hint="@string/create_wallet_name_hint"
    android:lines="1"
    android:gravity="center_vertical"
    android:textColor="@color/base_text_color"
    android:textSize="13sp" />

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#FFD8D8D8"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp" />

<EditText
    android:id="@+id/et_wallet_pwd"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@null"
    android:hint="@string/create_wallet_pwd_hint"
    android:gravity="center_vertical"
    android:lines="1"
    android:inputType="textPassword"
    android:maxLength="16"
    android:textColor="@color/base_text_color"
    android:textSize="13sp" />

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@color/mine_menu_divider_color" />

<EditText
    android:id="@+id/et_wallet_pwd_again"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@null"
    android:hint="@string/create_wallet_pwd_again_hint"
    android:lines="1"
    android:inputType="textPassword"
    android:maxLength="16"
    android:textColor="@color/base_text_color"
    android:textSize="13sp" />

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@color/mine_menu_divider_color" />

<EditText
    android:id="@+id/et_wallet_pwd_reminder_info"
    android:layout_width="match_parent"
    android:layout_height="49dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@null"
    android:hint="@string/create_wallet_pwd_reminder_info_hint"
    android:textColor="@color/base_text_color"
    android:textSize="13sp" />

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:background="@color/mine_menu_divider_color" />
<Button
    android:id="@+id/btn_create_wallet"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_width="match_parent"
    style="@style/button_red"
    android:enabled="false"
    android:text="@string/property_drawer_create_wallet" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginLeft="53dp"
    android:layout_marginRight="53dp"
    android:layout_marginTop="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_wallet_alert1"
        android:textColor="#FFEF1C06"
        android:textSize="11sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_wallet_alert2"
        android:textColor="#FFEF1C06"
        android:textSize="11sp" />

</LinearLayout>
</LinearLayout>




