<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/import_wallet_by_keystore"
        android:textColor="@color/load_wallet_tip_text_color"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_keystore"
        android:layout_width="330dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/etc_transfer_hex_data_et_shape"
        android:gravity="start"
        android:hint="@string/import_wallet_et_hint"
        android:padding="10dp"
        android:textColor="@color/discovery_application_item_name_color"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_wallet_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="21dp"
        android:background="@null"
        android:hint="@string/create_wallet_pwd_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="@color/discovery_application_item_name_color"
        android:textSize="13sp" />

    <View
        android:layout_width="330dp"
        android:layout_height="0.75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/mine_menu_divider_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/create_wallet_btn_bg_selector"
        android:enabled="false"
        android:gravity="center"
        android:id="@+id/btn_import_wallet"
        android:text="@string/begin_import"
        android:textColor="@color/white" />
</LinearLayout>